# harness

./: .gitleaks.toml  AGENTS.md  ARCHITECTURE.md  README.md  justfile  package-lock.json  package.json
.github/workflows/: docs-ci.yml  repo-ci.yml  scaffold-eval.yml  templates-ci.yml
docs/: CI.md  EXPECTATIONS.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  README.md  RELEASE.md  RELIABILITY.md
docs/exec-plans/: tech-debt-tracker.md
docs/product-specs/: index.md  new-user-onboarding.md
scaffolds/presets/: next-2x-fastapi-monorepo.json  next-axum-monorepo.json  next-fastapi-axum-monorepo.json  next-fastapi-monorepo.json  next-monorepo.json
scripts/: docs-check.mjs  generate-scaffolds.mjs  release-pack-check.mjs  repo-self-check.mjs  repo-supply-chain.mjs  scaffold-ci-matrix.mjs  scaffold-eval.mjs  validate-modules.mjs
templates/modules/backend-axum/: module.json
templates/modules/backend-fastapi/: module.json
templates/next-axum-monorepo/: .gitignore  .gitleaks.toml  ARCHITECTURE.md  README.md  justfile  mise.toml  package.json
templates/next-fastapi-monorepo/: .gitignore  .gitleaks.toml  .mise.toml  AGENTS.md  ARCHITECTURE.md  README.md  justfile  mise.toml  package.json  pnpm-lock.yaml
templates/next-fastapi-monorepo/apps/api/: README.md  pyproject.toml
templates/next-fastapi-monorepo/apps/api/app/core/: config.py
templates/next-fastapi-monorepo/apps/api/app/domain/: __init__.py
templates/next-monorepo/: .gitignore  .gitleaks.toml  .mise.toml  ARCHITECTURE.md  README.md  justfile  mise.toml  package.json  pnpm-lock.yaml
(+67 files in other folders)
