[project]
name = "api"
version = "0.1.0"
description = "FastAPI app for the Next.js monorepo template."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.121.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "deptry>=0.23.1",
    "httpx>=0.28.1",
    "import-linter>=2.6",
    "hypothesis>=6.140.3",
    "pip-audit>=2.9.0",
    "pytest>=8.4.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.2",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.basedpyright]
pythonVersion = "3.11"
include = ["app", "tests"]
typeCheckingMode = "strict"

[tool.deptry]
known_first_party = ["app"]

[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "Enforce FastAPI layer boundaries"
type = "layers"
layers = ["app.api", "app.core", "app.domain"]

[tool.pytest.ini_options]
testpaths = ["tests"]
